test/sema/example_11.colgm.stderr
Error: cannot use yield in function 'main'
  --> test/sema/example_11.colgm:2:5
  | 
2 |     yield 0
  |     ^^^^^^^

