test/sema/example_11.colgm
func main() {
    yield 0
}